<resources>
    <string name="app_name">FoodCashier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="masuk_untuk_melanjutkan">Masuk untuk melanjutkan</string>
    <string name="username">Username</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="menu">Menu</string>
    <string name="kasir">Kasir</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="transaksi">20 transaksi</string>
    <string name="produk">Produk</string>
    <string name="data_petugas">Data Petugas</string>
    <string name="nama">Nama</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="tambah">Tambah</string>
    <string name="ayam_goreng">Ayam Goreng</string>
    <string name="ayam_bakar">Ayam Bakar</string>
</resources>