<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparen_bg"
    android:visibility="visible"
    tools:context=".loginfragment.LoginAdminFragment">

    <ImageView
        android:id="@+id/loginbackgroundcolored"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="-25dp"
        android:src="@drawable/backgroundlogin"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selamatdatangtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins"
        android:text="@string/selamat_datang"
        android:textColor="@color/yellowtxt"
        android:textSize="33sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/masukuntuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/masuk_untuk_melanjutkan"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selamatdatangtxt" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masukuntuk">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/petugastxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="PETUGAS"
                android:textColor="@color/greytxt"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/admintxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="ADMIN"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usernametxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins"
                android:text="@string/username"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petugastxt" />

            <EditText
                android:id="@+id/username_inp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="Masukkan username"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernametxt" />

            <TextView
                android:id="@+id/passtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/password"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_inp" />


            <EditText
                android:id="@+id/pass_inp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="Masukkan password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passtxt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttongradient"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/masuk"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pass_inp" />

            <View
                android:id="@+id/line_petugas"
                android:layout_width="75dp"
                android:layout_height="3dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/yellowtxt"
                app:layout_constraintEnd_toEndOf="@+id/admintxt"
                app:layout_constraintStart_toStartOf="@+id/admintxt"
                app:layout_constraintTop_toBottomOf="@+id/admintxt" />

            <View
                android:id="@+id/line_admin"
                android:layout_width="75dp"
                android:layout_height="3dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/yellowtxt"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/admintxt"
                app:layout_constraintStart_toStartOf="@+id/admintxt"
                app:layout_constraintTop_toBottomOf="@+id/admintxt" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>